src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: 200 227 235;
  --foreground: 0 0 0;
  --primary: 255 215 0;
}

.dark {
  --background: 0 48 143;
  --foreground: 255 255 255;
  --primary: 171 69 0;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: 0 34 68;
    --foreground: 255 255 255;
    --primary: 226 167 64;
  }
}

body {
  height: 100dvh;
  overflow-y: auto;
}

#root {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-color: rgb(var(--background));
  color: rgb(var(--foreground));
  min-height: 100dvh;
  overflow-x: hidden;
}

#menu-icon {
  @apply flex relative bg-foreground w-5 h-1 rounded-xl mt-2;
}

#menu-icon::before {
  content: " ";
  @apply bg-foreground w-8 h-1 rounded-xl absolute -top-3 left-0;
}

#closed-icon {
  @apply flex relative bg-foreground w-6 h-1 rotate-45 rounded-xl mt-2;
}

#closed-icon::before {
  content: " ";
  @apply bg-foreground w-6 h-1 rounded-xl rotate-90 absolute left-0;
}

